# 
# MIT License
# 
# Copyright (c) 2022 AtomicGamer9523
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
# 

[package]
name = "rinuxcore"
version = "1.3.1"
authors = ["AtomicGamer9523@github.com"]
edition = "2018"
license = "MIT"

[workspace]
members = [
    "enderpearl",
    "generic_array",
    "pic8259",
    "rinux_macros",
    "vga_buffer",
]

[[test]]
name = "vga"
path = "tests/vga.rs"

[features]
default = ["epearl"]
full = ["default", "x86_64", "epearl", "screen"]
screen = []
x86_64 = []
epearl = []

[dependencies]
rinux_macros = { path = "./rinux_macros", package = "rinux_macros" }
vga_buffer = { path = "./vga_buffer", package = "vga_buffer" }
epearl = { path = "./enderpearl", package = "enderpearl" }
pic8259 = { path = "./pic8259", package = "pic8259" }
config = { path = "../config", package = "config" }
std3 = { path = "../std3", features = ["full"] }
linked_list_allocator = "0.9.0"
pc-keyboard = "0.7"

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
