[package]
name = "crossbeam-queue"
version = "0.2.1"
authors = ["The Crossbeam Project Developers"]
license = "MIT/Apache-2.0 AND BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/crossbeam-rs/crossbeam"
homepage = "https://github.com/crossbeam-rs/crossbeam/tree/master/crossbeam-utils"
documentation = "https://docs.rs/crossbeam-queue"
description = "Concurrent queues"
keywords = ["queue", "mpmc", "lock-free", "producer", "consumer"]
categories = ["concurrency", "data-structures"]

[dependencies]
cfg-if = { path = "../../std3/cfg-if" }

[dependencies.crossbeam-utils]
version = "0.7"
path = "../crossbeam-utils"